Add runtime parameter support

--- a/frontend/src/routes/navigation/navigation.styles.scss
+++ b/frontend/src/routes/navigation/navigation.styles.scss
@@ -1,31 +1,34 @@
-.navigation {
-  height: 70px;
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  margin-bottom: 25px;
+// .navigation {
+//   height: 70px;
+//   width: 100%;
+//   display: flex;
+//   justify-content: space-between;
+//   margin-bottom: 25px;
 
-  .logo-nav-link {
-    height: 100%;
-    width: 70px;
-    padding: 25px;
-    // .logo {
-        // scale: 10%;
-        // width: 70px;
-    // }
-  }
+//   .logo-nav-link {
+//     height: 100%;
+//     width: 70px;
+//     padding: 25px;
+//     // .logo {
+//         // scale: 10%;
+//         // width: 70px;
+//     // }
+//   }
 
-  .nav-links-container {
-    width: 50%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
+//   .nav-links-container {
+//     width: 50%;
+//     height: 100%;
+//     display: flex;
+//     align-items: center;
+//     justify-content: flex-end;
 
-    .nav-link {
-      padding: 10px 15px;
-      cursor: pointer;
-    }
-  }
+//     .nav-link {
+//       padding: 10px 15px;
+//       cursor: pointer;
+//     }
+//   }
+// }
+.logo {
+  // max-width: 1px;
 }
 
